--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HOME| The Paragraph</title>
+    <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/4922/4922073.png">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
