--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <main>
 
         <section>
-          <h2>Blog Post #1</h2>
+          <h2>Maggie's Super blog</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias laborum iste fugit facere inventore voluptatem rem quae expedita minima quidem veritatis neque itaque amet, voluptate, dignissimos vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime tempora, iste delectus excepturi, facilis nesciunt.</p>
         </section>
         <hr>
