--- a/index.html
+++ b/index.html
@@ -1,78 +1,114 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>HOME| The Paragraph</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="container">
       <header>
+        <div class="logo">
+          <h1><span>ear</span>Yeah</h1>
+        </div>
         <nav>
           <a href="index.html">HOME</a>
-          <a href="about.html">ABOUT</a>
-          <a href="contact.html">CONTACT</a>
+          <a href="create.html">CREATE</a>
+          <a href="#">CONTACT</a>
         </nav>
       </header>
 
       <main>
-
         <section>
-          <h2>Blog Post #1</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias laborum iste fugit facere inventore voluptatem rem quae expedita minima quidem veritatis neque itaque amet, voluptate, dignissimos vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime tempora, iste delectus excepturi, facilis nesciunt.</p>
+          <h3>I wanna be a</h3>
+          <h2>Pianist</h2>
+          <p><%= paragraph.pianist %></p>
         </section>
-        <hr>
+        <hr />
         <section>
-          <h2>Blog Post #2</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias laborum iste fugit facere inventore voluptatem rem quae expedita minima quidem veritatis neque itaque amet, voluptate, dignissimos vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime tempora, iste delectus excepturi, facilis nesciunt.</p>
+          <h3>I wanna be a</h3>
+          <h2>Guitarist</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+            laborum iste fugit facere inventore voluptatem rem quae expedita
+            minima quidem veritatis neque itaque amet, voluptate, dignissimos
+            vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate
+            quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime
+            tempora, iste delectus excepturi, facilis nesciunt.
+          </p>
         </section>
-        <hr>
+        <hr />
         <section>
-          <h2>Blog Post #3</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias laborum iste fugit facere inventore voluptatem rem quae expedita minima quidem veritatis neque itaque amet, voluptate, dignissimos vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime tempora, iste delectus excepturi, facilis nesciunt.</p>
+          <h3>I wanna be a</h3>
+          <h2>Recorder player</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+            laborum iste fugit facere inventore voluptatem rem quae expedita
+            minima quidem veritatis neque itaque amet, voluptate, dignissimos
+            vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate
+            quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime
+            tempora, iste delectus excepturi, facilis nesciunt.
+          </p>
         </section>
-        <hr>
+        <hr />
         <section>
-          <h2>Blog Post #4</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias laborum iste fugit facere inventore voluptatem rem quae expedita minima quidem veritatis neque itaque amet, voluptate, dignissimos vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime tempora, iste delectus excepturi, facilis nesciunt.</p>
+          <h3>I wanna be a</h3>
+          <h2>Violinist</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+            laborum iste fugit facere inventore voluptatem rem quae expedita
+            minima quidem veritatis neque itaque amet, voluptate, dignissimos
+            vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate
+            quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime
+            tempora, iste delectus excepturi, facilis nesciunt.
+          </p>
         </section>
-        <hr>
+        <hr />
         <section>
-          <h2>Blog Post #5</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias laborum iste fugit facere inventore voluptatem rem quae expedita minima quidem veritatis neque itaque amet, voluptate, dignissimos vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime tempora, iste delectus excepturi, facilis nesciunt.</p>
+          <h3>I wanna be a</h3>
+          <h2>Drummer</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
+            laborum iste fugit facere inventore voluptatem rem quae expedita
+            minima quidem veritatis neque itaque amet, voluptate, dignissimos
+            vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate
+            quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime
+            tempora, iste delectus excepturi, facilis nesciunt.
+          </p>
         </section>
-        <hr>
+        <hr />
       </main>
 
       <aside class="">
-          <h3>About</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, et, doloribus? Iure vitae quis officiis atque, alias vel id doloribus nam delectus inventore. Sit doloremque quod alias? Nostrum, impedit, reprehenderit!</p>
+        <h3>About</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate,
+          et, doloribus? Iure vitae quis officiis atque, alias vel id doloribus
+          nam delectus inventore. Sit doloremque quod alias? Nostrum, impedit,
+          reprehenderit!
+        </p>
 
-          <h3>Recent Posts</h3>
-          <ul>
-            <li> <a href="#">Blog Post #5</a> </li>
-            <li> <a href="#">Blog Post #4</a> </li>
-            <li> <a href="#">Blog Post #3</a> </li>
-            <li> <a href="#">Blog Post #2</a> </li>
-            <li> <a href="#">Blog Post #1</a> </li>
-
-          </ul>
+        <h3>Recent Posts</h3>
+        <ul>
+          <li><a href="#">Blog Post #5</a></li>
+          <li><a href="#">Blog Post #4</a></li>
+          <li><a href="#">Blog Post #3</a></li>
+          <li><a href="#">Blog Post #2</a></li>
+          <li><a href="#">Blog Post #1</a></li>
+        </ul>
       </aside>
 
       <footer>
-          <section>
-            <p style="padding: 10px;">skip to page</p>
-            <a href="#">2</a>
-            <a href="#">3</a>
-            <a href="#">4</a>
-            <a href="#">5</a>
-          </section>
-          <p>Copyright &copy; 2022 www.theparagraph.com</p>
+        <section>
+          <p style="padding: 10px">skip to page</p>
+          <a href="#">2</a>
+          <a href="#">3</a>
+          <a href="#">4</a>
+          <a href="#">5</a>
+        </section>
+        <p>Copyright &copy; 2022 www.theparagraph.com</p>
       </footer>
-
-
     </div>
-
-
+    <script src="index.js"></script>
   </body>
 </html>
