Post-test added views ...ejs line, not html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>HOME| The Paragraph</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/public/css/styles.css" />
   </head>
   <body>
     <div class="container">
       <header>
         <div class="logo">
-          <h1><span>ear</span>Yeah</h1>
+          <h1><span>The</span> Paragraph</h1>
         </div>
         <nav>
           <a href="index.html">HOME</a>
@@ -19,64 +19,17 @@
       </header>
 
       <main>
-        <section>
-          <h3>I wanna be a</h3>
-          <h2>Pianist</h2>
-          <p><%= paragraph.pianist %></p>
-        </section>
-        <hr />
-        <section>
-          <h3>I wanna be a</h3>
-          <h2>Guitarist</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
-            laborum iste fugit facere inventore voluptatem rem quae expedita
-            minima quidem veritatis neque itaque amet, voluptate, dignissimos
-            vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate
-            quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime
-            tempora, iste delectus excepturi, facilis nesciunt.
-          </p>
-        </section>
-        <hr />
-        <section>
-          <h3>I wanna be a</h3>
-          <h2>Recorder player</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
-            laborum iste fugit facere inventore voluptatem rem quae expedita
-            minima quidem veritatis neque itaque amet, voluptate, dignissimos
-            vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate
-            quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime
-            tempora, iste delectus excepturi, facilis nesciunt.
-          </p>
-        </section>
-        <hr />
-        <section>
-          <h3>I wanna be a</h3>
-          <h2>Violinist</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
-            laborum iste fugit facere inventore voluptatem rem quae expedita
-            minima quidem veritatis neque itaque amet, voluptate, dignissimos
-            vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate
-            quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime
-            tempora, iste delectus excepturi, facilis nesciunt.
-          </p>
-        </section>
-        <hr />
-        <section>
-          <h3>I wanna be a</h3>
-          <h2>Drummer</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias
-            laborum iste fugit facere inventore voluptatem rem quae expedita
-            minima quidem veritatis neque itaque amet, voluptate, dignissimos
-            vitae natus sed voluptatum. Sapiente ducimus doloremque voluptate
-            quibusdam nostrum est atque, hic quos voluptates eos suscipit maxime
-            tempora, iste delectus excepturi, facilis nesciunt.
-          </p>
-        </section>
-        <hr />
+        <h1>Welcome to The Paragraph</h1>
+        <p>Click create to create first post</p>
+        <!-- <ul>
+          <% articles.forEach(article => { %>
+          <h1>
+            <%= article.title %> <a href="/edit/<%= article._id %>">Edit</a>
+            <a href="/delete/<%= article._id %>">Delete</a>
+          </h1>
+          <p><%= article.content %></p>
+          <% }); %>
+        </ul> -->
       </main>
 
       <aside class="">
