--- a/create.html
+++ b/create.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>earYeah</title>
+    <title>CREATE | The Paragraph</title>
+    <link rel="stylesheet" href="/public/css/styles.css" />
   </head>
   <body>
+    <header>
+      <div class="logo">
+        <h1><span>The</span> Paragraph</h1>
+      </div>
+      <nav>
+        <a href="index.html">HOME</a>
+        <a href="create.html">CREATE</a>
+        <a href="#">CONTACT</a>
+      </nav>
+    </header>
     <form action="/" method="post">
       <h1>Create Post</h1>
       <label for="title">Title</label>
@@ -19,5 +30,15 @@
       ><br />
       <button type="submit">Submit</button>
     </form>
+    <footer>
+      <section>
+        <p style="padding: 10px">skip to page</p>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+      </section>
+      <p>Copyright &copy; 2022 www.theparagraph.com</p>
+    </footer>
   </body>
 </html>
